# same-someone-metrics

./: CONTRIBUTING.md  LICENSE  PUBLIC_SAFE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: framework.md  glossary.md  scoring.md  tiers.md
schemas/: run_result.schema.json  test_case.schema.json
scripts/: run_suite.py
src/same_someone_metrics/: __init__.py  model.py  models.py  report.py  runner.py  scoring.py
testsuites/: baseline_suite_v1.jsonl
