[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "same-someone-metrics"
version = "0.1.0"
description = "Behavior-first measurement tools for AI identity reliability"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
